--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <a class="nav-link" href="receta/pique.html">Pique Macho <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="receta/garapiña.html">Garapiñas <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="receta/garapina.html">Garapiñas <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="receta/salteña.html">Salteñas <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="receta/saltena.html">Salteñas <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="receta/picante.html">Picante de Pollo <span class="sr-only">(current)</span></a>
